Fixed map layout on iPhone.

--- a/modules/gui/frontend/src/app/home/body/process/mapLayout/mapLayout.module.css
+++ b/modules/gui/frontend/src/app/home/body/process/mapLayout/mapLayout.module.css
@@ -20,7 +20,8 @@
 @media screen and (max-width: 500px) {
     .content {
         height: 50rem;
+        max-height: calc(100vh - 20rem);
         grid-template-columns: 1fr;
-        grid-template-rows: 50% 50%;
+        grid-template-rows: 1fr 1fr;
     }
 }
